--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@ header {
 .btn-marvel {
   @apply bg-primary border-primary rounded-none transition-colors hover:bg-transparent hover:border-primary text-white;
 }
+
+/*========SIGN UP===========*/
+main.form-container {
+  background-image: url("./assets/images/poster-min.png");
+  /* background-image: url("./assets/images/bg-login.jpg"); */
+}
+main.form-container .overlay {
+  background-color: rgb(17 18 36 / 70%);
+}
