--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,16 @@ header {
 .section-heroe {
   background-image: url("../src//assets/images/poster.png");
 }
+#first-section {
+  background-image: linear-gradient(
+    to right top,
+    #161a3a,
+    #13162f,
+    #111224,
+    #0d0d1a,
+    #06060e
+  );
+}
 
 /*=====COMICS======*/
 .bg-comics {
